tests/NormalTests/paczka1/fuzzy1/63118978.err
Error in line 1: EiASnscvF7u A403 39,9
Error in line 2: hhQ2kxMe S268 1,6
Error in line 11: gKECVoX1ac A951 27,1
Error in line 13: A951 A951 38,7
Error in line 15: EiASnscvF7u A403 79,3
Error in line 19: EiASnscvF7u A951 30,5
Error in line 28: gKECVoX1ac S995 270,0
Error in line 21: EiASnscvF7u S995 79,5
Error in line 23: BLPn6SpWp A403 1,7
